Bug 156100 - some combo command not appear in gtk3 in rtl mod
Summary: some combo command not appear in gtk3 in rtl mod
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: UI (show other bugs)
Version:
(earliest affected)
7.5.3.2 release
Hardware: All Linux (All)
: medium normal
Assignee: Michael Weghorn
URL:
Whiteboard: target:24.2.0 target:7.5.6 target:7.6.1
Keywords: bibisected, bisected
Depends on:
Blocks: GTK3 RTL-UI
  Show dependency treegraph
 
Reported: 2023-06-30 08:29 UTC by HM
Modified: 2024-11-01 12:47 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments
insert table bug (57.70 KB, image/png)
2023-06-30 08:31 UTC, HM
Details

Note You need to log in before you can comment on or make changes to this bug.
Description HM 2023-06-30 08:29:09 UTC
Description:
Salam
after change locale to any rtl language like persian
in gtk3 we can not create table with insert table icon on toolbar 


Steps to Reproduce:
1.change interface language to persian
2.open libreoffice - writer in a gnome session
3.click on isert table icon on toolbar

Actual Results:
preview table to select number of rows and columns not appear property 

Expected Results:
view preview table to select number of rows and columns 


Reproducible: Sometimes


User Profile Reset: Yes

Additional Info:
linux mint
Comment 1 HM 2023-06-30 08:31:48 UTC
Created attachment 188135 [details]
insert table bug

insert table bug
Comment 2 Stéphane Guillou (stragu) 2023-07-18 09:26:37 UTC
Thank you for the report, HM!
I confirm this regression: widget gone in 7.5.4, present in 7.4.7.

Version: 7.5.4.2 (X86_64) / LibreOffice Community
Build ID: 36ccfdc35048b057fd9854c757a8b67ec53977b6
CPU threads: 8; OS: Linux 5.15; UI render: default; VCL: gtk3
Locale: en-AU (en_AU.UTF-8); UI: en-US
Calc: threaded

Using the environment variable SAL_RTL_ENABLED=1, I bibisected it with linux-64-7.5 repository:

- No dropdown at all in RTL UI at commit 7095b40f39b11b219d915a32870a966964bc6612, source dc0706cabfe39ddb6ea23d60ccfb756f2b9e6efb (and dropdown disconnected from toolbar in LTR UI), which is bug 154470
- Empty dropdown in RTL UI since commit fcd7b3dee371014661e586aed3afb25023c395f2 source 57c2209dd04abfda90e0aba782bc174243633ec9, which is the fix for bug 154470.

Not only Writer, so changing component to "UI". gen, qt5 and kf5 VCLs not affected.

Michael and Caolán, can you please have a look at this regression follow-up?
Comment 3 Michael Weghorn 2023-07-28 13:59:06 UTC
(In reply to Stéphane Guillou (stragu) from comment #2)
> Using the environment variable SAL_RTL_ENABLED=1, I bibisected it with
> linux-64-7.5 repository:

Is this on Wayland?
It behaves a bit differently for me on X11.


> - No dropdown at all in RTL UI at commit
> 7095b40f39b11b219d915a32870a966964bc6612, source
> dc0706cabfe39ddb6ea23d60ccfb756f2b9e6efb (and dropdown disconnected from
> toolbar in LTR UI), which is bug 154470

Both of these scenarios still work OK for me on X11 (bug 154470 is known to be Wayland-only).

> - Empty dropdown in RTL UI since commit
> fcd7b3dee371014661e586aed3afb25023c395f2 source
> 57c2209dd04abfda90e0aba782bc174243633ec9, which is the fix for bug 154470.

I see this, too, so the actual problem described here is reproducible on X11 just as well.

Anyway, I'm working on a fix (probably fixing the original problem from tdf#140762 and tdf#152671 differently and then reverting the 2 above commits).
Comment 4 Michael Weghorn 2023-08-01 08:44:34 UTC
(In reply to Michael Weghorn from comment #3)
> Anyway, I'm working on a fix (probably fixing the original problem from
> tdf#140762 and tdf#152671 differently and then reverting the 2 above
> commits).

I have a fix for one issue: https://gerrit.libreoffice.org/c/core/+/155126
With that in place, the scenario from tdf#140762 mostly works (but no announcement for the initially focused item), yet tdf#152671 still doesn't when reverting the original commits, so there are apparently more issues...

I plan to further look into this as I find time, but to unbreak both scenarios for now, it might be easiest to just revert back to the old behavior for gtk3/gtk4 only and handle everything else afterwards; suggested Gerrit change doing that: https://gerrit.libreoffice.org/c/core/+/155125
Comment 5 Commit Notification 2023-08-01 11:12:11 UTC
Michael Weghorn committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/3bb762c53ea79f8915a1b8fa39f3f5f57aa68c84

tdf#156100 tdf#156561 Revert to previous behavior for gtk popups

It will be available in 24.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 Michael Weghorn 2023-08-01 11:13:41 UTC
(In reply to Michael Weghorn from comment #4)
> I plan to further look into this as I find time, but to unbreak both
> scenarios for now, it might be easiest to just revert back to the old
> behavior for gtk3/gtk4 only and handle everything else afterwards; suggested
> Gerrit change doing that: https://gerrit.libreoffice.org/c/core/+/155125

Done on master now, there's tdf#156561 to keep track of the underlying issues.

Pending backports for 7-6 and 7-5:
https://gerrit.libreoffice.org/c/core/+/155147
https://gerrit.libreoffice.org/c/core/+/155148
Comment 7 Commit Notification 2023-08-02 10:50:43 UTC
Michael Weghorn committed a patch related to this issue.
It has been pushed to "libreoffice-7-5":

https://git.libreoffice.org/core/commit/cd85126bb6b520abb2f40221fd6097dc2ddad672

tdf#156100 tdf#156561 Revert to previous behavior for gtk popups

It will be available in 7.5.6.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 8 Commit Notification 2023-08-02 10:50:48 UTC
Michael Weghorn committed a patch related to this issue.
It has been pushed to "libreoffice-7-6":

https://git.libreoffice.org/core/commit/2c11a18897225a89df99869c702c0cd91ed9e11b

tdf#156100 tdf#156561 Revert to previous behavior for gtk popups

It will be available in 7.6.1.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 9 Stéphane Guillou (stragu) 2024-11-01 12:47:53 UTC
Looks good in:

Version: 25.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 6bd9f1f93301756bdc6fa57911d163e9fa5ad313
CPU threads: 8; OS: Linux 6.8; UI render: default; VCL: gtk3
Locale: en-AU (en_AU.UTF-8); UI: en-US
Calc: CL threaded

Thanks Michael!